// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproBreadcrumb > Snapshots > renders the component with all properties filled in 1`] = `
<nav
  aria-label="Fil d'Ariane"
  class="breadcrumb"
  id="modified-unique-id-container"
>
  <ol
    class="
      align-center
      breadcrumb__list
      d-flex
      list-style-none
    "
    id="modified-unique-id-list"
  >
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-btn-0"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-btn-1"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
        uniqueid="modified-unique-id-btn-2"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li>
      <p
        aria-current="page"
        class="
          breadcrumb__active-page
          mb-0
          text-none
        "
        id="modified-unique-id-current-page"
      >
        New item 4
      </p>
    </li>
  </ol>
</nav>
`;

exports[`AmeliproBreadcrumb > Snapshots > renders the component with only required properties filled in 1`] = `
<nav
  aria-label="Fil d'Ariane"
  class="breadcrumb"
>
  <ol class="
    align-center
    breadcrumb__list
    d-flex
    list-style-none
  ">
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li class="
      align-center
      breadcrumb__item
      d-flex
    ">
      <amelipro-btn-stub
        badge="false"
        badgebgcolor="ap-pink"
        badgecolor="ap-white"
        bordered="false"
        class="
          breadcrumb__btn
          font-weight-semibold
          text-none
        "
        color="ap-blue-darken-1"
        disabled="false"
        hovercolor="ap-blue-darken-2"
        hoverunderline="true"
        iconbgcolor="transparent"
        iconbordered="false"
        iconleft="false"
        infoblock="false"
        minheight="2.5rem"
        size="60px"
        text="true"
        textcolor="ap-white"
        type="button"
        underline="false"
      ></amelipro-btn-stub>
      <span
        aria-hidden="true"
        class="breadcrumb__separator"
      ></span>
    </li>
    <li>
      <p
        aria-current="page"
        class="
          breadcrumb__active-page
          mb-0
          text-none
        "
      >
        item 4
      </p>
    </li>
  </ol>
</nav>
`;
